lib_LTLIBRARIES = libttk.la
libttk_la_SOURCES = ttk.c gradient.c icons.c imgview.c menu.c mwin-emu.c \
slider.c textarea.c appearance.l \
SDL_gfxPrimitives_Byte.c SDL_gfxPrimitives.c SDL_rotozoom.c SFont.c sdl.c
libttk_la_CFLAGS = -I${top_builddir}/include -DSDL=1
libttk_la_LDFLAGS = -lSDL_image -lSDL_ttf
